blocks_src = files([
	'Air.cpp',
	'Stone.cpp',
	'Granite.cpp',
	'PolishedGranite.cpp',
	'Diorite.cpp',
	'PolishedDiorite.cpp',
	'Andesite.cpp',
	'PolishedAndesite.cpp',
	'GrassBlock.cpp',
	'Dirt.cpp',
	'CoarseDirt.cpp',
	'Podzol.cpp',
	'Cobblestone.cpp',
	'OakPlanks.cpp',
	'SprucePlanks.cpp',
	'BirchPlanks.cpp',
	'JunglePlanks.cpp',
	'AcaciaPlanks.cpp',
	'DarkOakPlanks.cpp',
	'MangrovePlanks.cpp',
	'BambooPlanks.cpp',
	'BambooMosaic.cpp',
	'OakSapling.cpp',
	'SpruceSapling.cpp',
	'BirchSapling.cpp',
	'JungleSapling.cpp',
	'AcaciaSapling.cpp',
	'DarkOakSapling.cpp',
	'MangrovePropagule.cpp',
	'Bedrock.cpp',
	'Water.cpp',
	'Lava.cpp',
	'Sand.cpp',
	'RedSand.cpp',
	'Gravel.cpp',
	'GoldOre.cpp',
	'DeepslateGoldOre.cpp',
	'IronOre.cpp',
	'DeepslateIronOre.cpp',
	'CoalOre.cpp',
	'DeepslateCoalOre.cpp',
	'NetherGoldOre.cpp',
	'OakLog.cpp',
	'SpruceLog.cpp',
	'BirchLog.cpp',
	'JungleLog.cpp',
	'AcaciaLog.cpp',
	'DarkOakLog.cpp',
	'MangroveLog.cpp',
	'MangroveRoots.cpp',
	'MuddyMangroveRoots.cpp',
	'BambooBlock.cpp',
	'StrippedSpruceLog.cpp',
	'StrippedBirchLog.cpp',
	'StrippedJungleLog.cpp',
	'StrippedAcaciaLog.cpp',
	'StrippedDarkOakLog.cpp',
	'StrippedOakLog.cpp',
	'StrippedMangroveLog.cpp',
	'StrippedBambooBlock.cpp',
	'OakWood.cpp',
	'SpruceWood.cpp',
	'BirchWood.cpp',
	'JungleWood.cpp',
	'AcaciaWood.cpp',
	'DarkOakWood.cpp',
	'MangroveWood.cpp',
	'StrippedOakWood.cpp',
	'StrippedSpruceWood.cpp',
	'StrippedBirchWood.cpp',
	'StrippedJungleWood.cpp',
	'StrippedAcaciaWood.cpp',
	'StrippedDarkOakWood.cpp',
	'StrippedMangroveWood.cpp',
	'OakLeaves.cpp',
	'SpruceLeaves.cpp',
	'BirchLeaves.cpp',
	'JungleLeaves.cpp',
	'AcaciaLeaves.cpp',
	'DarkOakLeaves.cpp',
	'MangroveLeaves.cpp',
	'AzaleaLeaves.cpp',
	'FloweringAzaleaLeaves.cpp',
	'Sponge.cpp',
	'WetSponge.cpp',
	'Glass.cpp',
	'LapisOre.cpp',
	'DeepslateLapisOre.cpp',
	'LapisBlock.cpp',
	'Dispenser.cpp',
	'Sandstone.cpp',
	'ChiseledSandstone.cpp',
	'CutSandstone.cpp',
	'NoteBlock.cpp',
	'WhiteBed.cpp',
	'OrangeBed.cpp',
	'MagentaBed.cpp',
	'LightBlueBed.cpp',
	'YellowBed.cpp',
	'LimeBed.cpp',
	'PinkBed.cpp',
	'GrayBed.cpp',
	'LightGrayBed.cpp',
	'CyanBed.cpp',
	'PurpleBed.cpp',
	'BlueBed.cpp',
	'BrownBed.cpp',
	'GreenBed.cpp',
	'RedBed.cpp',
	'BlackBed.cpp',
	'PoweredRail.cpp',
	'DetectorRail.cpp',
	'StickyPiston.cpp',
	'Cobweb.cpp',
	'Grass.cpp',
	'Fern.cpp',
	'DeadBush.cpp',
	'Seagrass.cpp',
	'TallSeagrass.cpp',
	'Piston.cpp',
	'PistonHead.cpp',
	'WhiteWool.cpp',
	'OrangeWool.cpp',
	'MagentaWool.cpp',
	'LightBlueWool.cpp',
	'YellowWool.cpp',
	'LimeWool.cpp',
	'PinkWool.cpp',
	'GrayWool.cpp',
	'LightGrayWool.cpp',
	'CyanWool.cpp',
	'PurpleWool.cpp',
	'BlueWool.cpp',
	'BrownWool.cpp',
	'GreenWool.cpp',
	'RedWool.cpp',
	'BlackWool.cpp',
	'MovingPiston.cpp',
	'Dandelion.cpp',
	'Poppy.cpp',
	'BlueOrchid.cpp',
	'Allium.cpp',
	'AzureBluet.cpp',
	'RedTulip.cpp',
	'OrangeTulip.cpp',
	'WhiteTulip.cpp',
	'PinkTulip.cpp',
	'OxeyeDaisy.cpp',
	'Cornflower.cpp',
	'WitherRose.cpp',
	'LilyOfTheValley.cpp',
	'BrownMushroom.cpp',
	'RedMushroom.cpp',
	'GoldBlock.cpp',
	'IronBlock.cpp',
	'Bricks.cpp',
	'Tnt.cpp',
	'Bookshelf.cpp',
	'ChiseledBookshelf.cpp',
	'MossyCobblestone.cpp',
	'Obsidian.cpp',
	'Torch.cpp',
	'WallTorch.cpp',
	'Fire.cpp',
	'SoulFire.cpp',
	'Spawner.cpp',
	'OakStairs.cpp',
	'Chest.cpp',
	'RedstoneWire.cpp',
	'DiamondOre.cpp',
	'DeepslateDiamondOre.cpp',
	'DiamondBlock.cpp',
	'CraftingTable.cpp',
	'Wheat.cpp',
	'Farmland.cpp',
	'Furnace.cpp',
	'OakSign.cpp',
	'SpruceSign.cpp',
	'BirchSign.cpp',
	'AcaciaSign.cpp',
	'JungleSign.cpp',
	'DarkOakSign.cpp',
	'MangroveSign.cpp',
	'BambooSign.cpp',
	'OakDoor.cpp',
	'Ladder.cpp',
	'Rail.cpp',
	'CobblestoneStairs.cpp',
	'OakWallSign.cpp',
	'SpruceWallSign.cpp',
	'BirchWallSign.cpp',
	'AcaciaWallSign.cpp',
	'JungleWallSign.cpp',
	'DarkOakWallSign.cpp',
	'MangroveWallSign.cpp',
	'BambooWallSign.cpp',
	'OakHangingSign.cpp',
	'SpruceHangingSign.cpp',
	'BirchHangingSign.cpp',
	'AcaciaHangingSign.cpp',
	'JungleHangingSign.cpp',
	'DarkOakHangingSign.cpp',
	'CrimsonHangingSign.cpp',
	'WarpedHangingSign.cpp',
	'MangroveHangingSign.cpp',
	'BambooHangingSign.cpp',
	'OakWallHangingSign.cpp',
	'SpruceWallHangingSign.cpp',
	'BirchWallHangingSign.cpp',
	'AcaciaWallHangingSign.cpp',
	'JungleWallHangingSign.cpp',
	'DarkOakWallHangingSign.cpp',
	'MangroveWallHangingSign.cpp',
	'CrimsonWallHangingSign.cpp',
	'WarpedWallHangingSign.cpp',
	'BambooWallHangingSign.cpp',
	'Lever.cpp',
	'StonePressurePlate.cpp',
	'IronDoor.cpp',
	'OakPressurePlate.cpp',
	'SprucePressurePlate.cpp',
	'BirchPressurePlate.cpp',
	'JunglePressurePlate.cpp',
	'AcaciaPressurePlate.cpp',
	'DarkOakPressurePlate.cpp',
	'MangrovePressurePlate.cpp',
	'BambooPressurePlate.cpp',
	'RedstoneOre.cpp',
	'DeepslateRedstoneOre.cpp',
	'RedstoneTorch.cpp',
	'RedstoneWallTorch.cpp',
	'StoneButton.cpp',
	'Snow.cpp',
	'Ice.cpp',
	'SnowBlock.cpp',
	'Cactus.cpp',
	'Clay.cpp',
	'SugarCane.cpp',
	'Jukebox.cpp',
	'OakFence.cpp',
	'Pumpkin.cpp',
	'Netherrack.cpp',
	'SoulSand.cpp',
	'SoulSoil.cpp',
	'Basalt.cpp',
	'PolishedBasalt.cpp',
	'SoulTorch.cpp',
	'SoulWallTorch.cpp',
	'Glowstone.cpp',
	'NetherPortal.cpp',
	'CarvedPumpkin.cpp',
	'JackOLantern.cpp',
	'Cake.cpp',
	'Repeater.cpp',
	'WhiteStainedGlass.cpp',
	'OrangeStainedGlass.cpp',
	'MagentaStainedGlass.cpp',
	'LightBlueStainedGlass.cpp',
	'YellowStainedGlass.cpp',
	'LimeStainedGlass.cpp',
	'PinkStainedGlass.cpp',
	'GrayStainedGlass.cpp',
	'LightGrayStainedGlass.cpp',
	'CyanStainedGlass.cpp',
	'PurpleStainedGlass.cpp',
	'BlueStainedGlass.cpp',
	'BrownStainedGlass.cpp',
	'GreenStainedGlass.cpp',
	'RedStainedGlass.cpp',
	'BlackStainedGlass.cpp',
	'OakTrapdoor.cpp',
	'SpruceTrapdoor.cpp',
	'BirchTrapdoor.cpp',
	'JungleTrapdoor.cpp',
	'AcaciaTrapdoor.cpp',
	'DarkOakTrapdoor.cpp',
	'MangroveTrapdoor.cpp',
	'BambooTrapdoor.cpp',
	'StoneBricks.cpp',
	'MossyStoneBricks.cpp',
	'CrackedStoneBricks.cpp',
	'ChiseledStoneBricks.cpp',
	'PackedMud.cpp',
	'MudBricks.cpp',
	'InfestedStone.cpp',
	'InfestedCobblestone.cpp',
	'InfestedStoneBricks.cpp',
	'InfestedMossyStoneBricks.cpp',
	'InfestedCrackedStoneBricks.cpp',
	'InfestedChiseledStoneBricks.cpp',
	'BrownMushroomBlock.cpp',
	'RedMushroomBlock.cpp',
	'MushroomStem.cpp',
	'IronBars.cpp',
	'Chain.cpp',
	'GlassPane.cpp',
	'Melon.cpp',
	'AttachedPumpkinStem.cpp',
	'AttachedMelonStem.cpp',
	'PumpkinStem.cpp',
	'MelonStem.cpp',
	'Vine.cpp',
	'GlowLichen.cpp',
	'OakFenceGate.cpp',
	'BrickStairs.cpp',
	'StoneBrickStairs.cpp',
	'MudBrickStairs.cpp',
	'Mycelium.cpp',
	'LilyPad.cpp',
	'NetherBricks.cpp',
	'NetherBrickFence.cpp',
	'NetherBrickStairs.cpp',
	'NetherWart.cpp',
	'EnchantingTable.cpp',
	'BrewingStand.cpp',
	'Cauldron.cpp',
	'WaterCauldron.cpp',
	'LavaCauldron.cpp',
	'PowderSnowCauldron.cpp',
	'EndPortal.cpp',
	'EndPortalFrame.cpp',
	'EndStone.cpp',
	'DragonEgg.cpp',
	'RedstoneLamp.cpp',
	'Cocoa.cpp',
	'SandstoneStairs.cpp',
	'EmeraldOre.cpp',
	'DeepslateEmeraldOre.cpp',
	'EnderChest.cpp',
	'TripwireHook.cpp',
	'Tripwire.cpp',
	'EmeraldBlock.cpp',
	'SpruceStairs.cpp',
	'BirchStairs.cpp',
	'JungleStairs.cpp',
	'CommandBlock.cpp',
	'Beacon.cpp',
	'CobblestoneWall.cpp',
	'MossyCobblestoneWall.cpp',
	'FlowerPot.cpp',
	'PottedOakSapling.cpp',
	'PottedSpruceSapling.cpp',
	'PottedBirchSapling.cpp',
	'PottedJungleSapling.cpp',
	'PottedAcaciaSapling.cpp',
	'PottedDarkOakSapling.cpp',
	'PottedMangrovePropagule.cpp',
	'PottedFern.cpp',
	'PottedDandelion.cpp',
	'PottedPoppy.cpp',
	'PottedBlueOrchid.cpp',
	'PottedAllium.cpp',
	'PottedAzureBluet.cpp',
	'PottedRedTulip.cpp',
	'PottedOrangeTulip.cpp',
	'PottedWhiteTulip.cpp',
	'PottedPinkTulip.cpp',
	'PottedOxeyeDaisy.cpp',
	'PottedCornflower.cpp',
	'PottedLilyOfTheValley.cpp',
	'PottedWitherRose.cpp',
	'PottedRedMushroom.cpp',
	'PottedBrownMushroom.cpp',
	'PottedDeadBush.cpp',
	'PottedCactus.cpp',
	'Carrots.cpp',
	'Potatoes.cpp',
	'OakButton.cpp',
	'SpruceButton.cpp',
	'BirchButton.cpp',
	'JungleButton.cpp',
	'AcaciaButton.cpp',
	'DarkOakButton.cpp',
	'MangroveButton.cpp',
	'BambooButton.cpp',
	'SkeletonSkull.cpp',
	'SkeletonWallSkull.cpp',
	'WitherSkeletonSkull.cpp',
	'WitherSkeletonWallSkull.cpp',
	'ZombieHead.cpp',
	'ZombieWallHead.cpp',
	'PlayerHead.cpp',
	'PlayerWallHead.cpp',
	'CreeperHead.cpp',
	'CreeperWallHead.cpp',
	'DragonHead.cpp',
	'DragonWallHead.cpp',
	'PiglinHead.cpp',
	'PiglinWallHead.cpp',
	'Anvil.cpp',
	'ChippedAnvil.cpp',
	'DamagedAnvil.cpp',
	'TrappedChest.cpp',
	'LightWeightedPressurePlate.cpp',
	'HeavyWeightedPressurePlate.cpp',
	'Comparator.cpp',
	'DaylightDetector.cpp',
	'RedstoneBlock.cpp',
	'NetherQuartzOre.cpp',
	'Hopper.cpp',
	'QuartzBlock.cpp',
	'ChiseledQuartzBlock.cpp',
	'QuartzPillar.cpp',
	'QuartzStairs.cpp',
	'ActivatorRail.cpp',
	'Dropper.cpp',
	'WhiteTerracotta.cpp',
	'OrangeTerracotta.cpp',
	'MagentaTerracotta.cpp',
	'LightBlueTerracotta.cpp',
	'YellowTerracotta.cpp',
	'LimeTerracotta.cpp',
	'PinkTerracotta.cpp',
	'GrayTerracotta.cpp',
	'LightGrayTerracotta.cpp',
	'CyanTerracotta.cpp',
	'PurpleTerracotta.cpp',
	'BlueTerracotta.cpp',
	'BrownTerracotta.cpp',
	'GreenTerracotta.cpp',
	'RedTerracotta.cpp',
	'BlackTerracotta.cpp',
	'WhiteStainedGlassPane.cpp',
	'OrangeStainedGlassPane.cpp',
	'MagentaStainedGlassPane.cpp',
	'LightBlueStainedGlassPane.cpp',
	'YellowStainedGlassPane.cpp',
	'LimeStainedGlassPane.cpp',
	'PinkStainedGlassPane.cpp',
	'GrayStainedGlassPane.cpp',
	'LightGrayStainedGlassPane.cpp',
	'CyanStainedGlassPane.cpp',
	'PurpleStainedGlassPane.cpp',
	'BlueStainedGlassPane.cpp',
	'BrownStainedGlassPane.cpp',
	'GreenStainedGlassPane.cpp',
	'RedStainedGlassPane.cpp',
	'BlackStainedGlassPane.cpp',
	'AcaciaStairs.cpp',
	'DarkOakStairs.cpp',
	'MangroveStairs.cpp',
	'BambooStairs.cpp',
	'BambooMosaicStairs.cpp',
	'SlimeBlock.cpp',
	'Barrier.cpp',
	'Light.cpp',
	'IronTrapdoor.cpp',
	'Prismarine.cpp',
	'PrismarineBricks.cpp',
	'DarkPrismarine.cpp',
	'PrismarineStairs.cpp',
	'PrismarineBrickStairs.cpp',
	'DarkPrismarineStairs.cpp',
	'PrismarineSlab.cpp',
	'PrismarineBrickSlab.cpp',
	'DarkPrismarineSlab.cpp',
	'SeaLantern.cpp',
	'HayBlock.cpp',
	'WhiteCarpet.cpp',
	'OrangeCarpet.cpp',
	'MagentaCarpet.cpp',
	'LightBlueCarpet.cpp',
	'YellowCarpet.cpp',
	'LimeCarpet.cpp',
	'PinkCarpet.cpp',
	'GrayCarpet.cpp',
	'LightGrayCarpet.cpp',
	'CyanCarpet.cpp',
	'PurpleCarpet.cpp',
	'BlueCarpet.cpp',
	'BrownCarpet.cpp',
	'GreenCarpet.cpp',
	'RedCarpet.cpp',
	'BlackCarpet.cpp',
	'Terracotta.cpp',
	'CoalBlock.cpp',
	'PackedIce.cpp',
	'Sunflower.cpp',
	'Lilac.cpp',
	'RoseBush.cpp',
	'Peony.cpp',
	'TallGrass.cpp',
	'LargeFern.cpp',
	'WhiteBanner.cpp',
	'OrangeBanner.cpp',
	'MagentaBanner.cpp',
	'LightBlueBanner.cpp',
	'YellowBanner.cpp',
	'LimeBanner.cpp',
	'PinkBanner.cpp',
	'GrayBanner.cpp',
	'LightGrayBanner.cpp',
	'CyanBanner.cpp',
	'PurpleBanner.cpp',
	'BlueBanner.cpp',
	'BrownBanner.cpp',
	'GreenBanner.cpp',
	'RedBanner.cpp',
	'BlackBanner.cpp',
	'WhiteWallBanner.cpp',
	'OrangeWallBanner.cpp',
	'MagentaWallBanner.cpp',
	'LightBlueWallBanner.cpp',
	'YellowWallBanner.cpp',
	'LimeWallBanner.cpp',
	'PinkWallBanner.cpp',
	'GrayWallBanner.cpp',
	'LightGrayWallBanner.cpp',
	'CyanWallBanner.cpp',
	'PurpleWallBanner.cpp',
	'BlueWallBanner.cpp',
	'BrownWallBanner.cpp',
	'GreenWallBanner.cpp',
	'RedWallBanner.cpp',
	'BlackWallBanner.cpp',
	'RedSandstone.cpp',
	'ChiseledRedSandstone.cpp',
	'CutRedSandstone.cpp',
	'RedSandstoneStairs.cpp',
	'OakSlab.cpp',
	'SpruceSlab.cpp',
	'BirchSlab.cpp',
	'JungleSlab.cpp',
	'AcaciaSlab.cpp',
	'DarkOakSlab.cpp',
	'MangroveSlab.cpp',
	'BambooSlab.cpp',
	'BambooMosaicSlab.cpp',
	'StoneSlab.cpp',
	'SmoothStoneSlab.cpp',
	'SandstoneSlab.cpp',
	'CutSandstoneSlab.cpp',
	'PetrifiedOakSlab.cpp',
	'CobblestoneSlab.cpp',
	'BrickSlab.cpp',
	'StoneBrickSlab.cpp',
	'MudBrickSlab.cpp',
	'NetherBrickSlab.cpp',
	'QuartzSlab.cpp',
	'RedSandstoneSlab.cpp',
	'CutRedSandstoneSlab.cpp',
	'PurpurSlab.cpp',
	'SmoothStone.cpp',
	'SmoothSandstone.cpp',
	'SmoothQuartz.cpp',
	'SmoothRedSandstone.cpp',
	'SpruceFenceGate.cpp',
	'BirchFenceGate.cpp',
	'JungleFenceGate.cpp',
	'AcaciaFenceGate.cpp',
	'DarkOakFenceGate.cpp',
	'MangroveFenceGate.cpp',
	'BambooFenceGate.cpp',
	'SpruceFence.cpp',
	'BirchFence.cpp',
	'JungleFence.cpp',
	'AcaciaFence.cpp',
	'DarkOakFence.cpp',
	'MangroveFence.cpp',
	'BambooFence.cpp',
	'SpruceDoor.cpp',
	'BirchDoor.cpp',
	'JungleDoor.cpp',
	'AcaciaDoor.cpp',
	'DarkOakDoor.cpp',
	'MangroveDoor.cpp',
	'BambooDoor.cpp',
	'EndRod.cpp',
	'ChorusPlant.cpp',
	'ChorusFlower.cpp',
	'PurpurBlock.cpp',
	'PurpurPillar.cpp',
	'PurpurStairs.cpp',
	'EndStoneBricks.cpp',
	'Beetroots.cpp',
	'DirtPath.cpp',
	'EndGateway.cpp',
	'RepeatingCommandBlock.cpp',
	'ChainCommandBlock.cpp',
	'FrostedIce.cpp',
	'MagmaBlock.cpp',
	'NetherWartBlock.cpp',
	'RedNetherBricks.cpp',
	'BoneBlock.cpp',
	'StructureVoid.cpp',
	'Observer.cpp',
	'ShulkerBox.cpp',
	'WhiteShulkerBox.cpp',
	'OrangeShulkerBox.cpp',
	'MagentaShulkerBox.cpp',
	'LightBlueShulkerBox.cpp',
	'YellowShulkerBox.cpp',
	'LimeShulkerBox.cpp',
	'PinkShulkerBox.cpp',
	'GrayShulkerBox.cpp',
	'LightGrayShulkerBox.cpp',
	'CyanShulkerBox.cpp',
	'PurpleShulkerBox.cpp',
	'BlueShulkerBox.cpp',
	'BrownShulkerBox.cpp',
	'GreenShulkerBox.cpp',
	'RedShulkerBox.cpp',
	'BlackShulkerBox.cpp',
	'WhiteGlazedTerracotta.cpp',
	'OrangeGlazedTerracotta.cpp',
	'MagentaGlazedTerracotta.cpp',
	'LightBlueGlazedTerracotta.cpp',
	'YellowGlazedTerracotta.cpp',
	'LimeGlazedTerracotta.cpp',
	'PinkGlazedTerracotta.cpp',
	'GrayGlazedTerracotta.cpp',
	'LightGrayGlazedTerracotta.cpp',
	'CyanGlazedTerracotta.cpp',
	'PurpleGlazedTerracotta.cpp',
	'BlueGlazedTerracotta.cpp',
	'BrownGlazedTerracotta.cpp',
	'GreenGlazedTerracotta.cpp',
	'RedGlazedTerracotta.cpp',
	'BlackGlazedTerracotta.cpp',
	'WhiteConcrete.cpp',
	'OrangeConcrete.cpp',
	'MagentaConcrete.cpp',
	'LightBlueConcrete.cpp',
	'YellowConcrete.cpp',
	'LimeConcrete.cpp',
	'PinkConcrete.cpp',
	'GrayConcrete.cpp',
	'LightGrayConcrete.cpp',
	'CyanConcrete.cpp',
	'PurpleConcrete.cpp',
	'BlueConcrete.cpp',
	'BrownConcrete.cpp',
	'GreenConcrete.cpp',
	'RedConcrete.cpp',
	'BlackConcrete.cpp',
	'WhiteConcretePowder.cpp',
	'OrangeConcretePowder.cpp',
	'MagentaConcretePowder.cpp',
	'LightBlueConcretePowder.cpp',
	'YellowConcretePowder.cpp',
	'LimeConcretePowder.cpp',
	'PinkConcretePowder.cpp',
	'GrayConcretePowder.cpp',
	'LightGrayConcretePowder.cpp',
	'CyanConcretePowder.cpp',
	'PurpleConcretePowder.cpp',
	'BlueConcretePowder.cpp',
	'BrownConcretePowder.cpp',
	'GreenConcretePowder.cpp',
	'RedConcretePowder.cpp',
	'BlackConcretePowder.cpp',
	'Kelp.cpp',
	'KelpPlant.cpp',
	'DriedKelpBlock.cpp',
	'TurtleEgg.cpp',
	'DeadTubeCoralBlock.cpp',
	'DeadBrainCoralBlock.cpp',
	'DeadBubbleCoralBlock.cpp',
	'DeadFireCoralBlock.cpp',
	'DeadHornCoralBlock.cpp',
	'TubeCoralBlock.cpp',
	'BrainCoralBlock.cpp',
	'BubbleCoralBlock.cpp',
	'FireCoralBlock.cpp',
	'HornCoralBlock.cpp',
	'DeadTubeCoral.cpp',
	'DeadBrainCoral.cpp',
	'DeadBubbleCoral.cpp',
	'DeadFireCoral.cpp',
	'DeadHornCoral.cpp',
	'TubeCoral.cpp',
	'BrainCoral.cpp',
	'BubbleCoral.cpp',
	'FireCoral.cpp',
	'HornCoral.cpp',
	'DeadTubeCoralFan.cpp',
	'DeadBrainCoralFan.cpp',
	'DeadBubbleCoralFan.cpp',
	'DeadFireCoralFan.cpp',
	'DeadHornCoralFan.cpp',
	'TubeCoralFan.cpp',
	'BrainCoralFan.cpp',
	'BubbleCoralFan.cpp',
	'FireCoralFan.cpp',
	'HornCoralFan.cpp',
	'DeadTubeCoralWallFan.cpp',
	'DeadBrainCoralWallFan.cpp',
	'DeadBubbleCoralWallFan.cpp',
	'DeadFireCoralWallFan.cpp',
	'DeadHornCoralWallFan.cpp',
	'TubeCoralWallFan.cpp',
	'BrainCoralWallFan.cpp',
	'BubbleCoralWallFan.cpp',
	'FireCoralWallFan.cpp',
	'HornCoralWallFan.cpp',
	'SeaPickle.cpp',
	'BlueIce.cpp',
	'Conduit.cpp',
	'BambooSapling.cpp',
	'Bamboo.cpp',
	'PottedBamboo.cpp',
	'VoidAir.cpp',
	'CaveAir.cpp',
	'BubbleColumn.cpp',
	'PolishedGraniteStairs.cpp',
	'SmoothRedSandstoneStairs.cpp',
	'MossyStoneBrickStairs.cpp',
	'PolishedDioriteStairs.cpp',
	'MossyCobblestoneStairs.cpp',
	'EndStoneBrickStairs.cpp',
	'StoneStairs.cpp',
	'SmoothSandstoneStairs.cpp',
	'SmoothQuartzStairs.cpp',
	'GraniteStairs.cpp',
	'AndesiteStairs.cpp',
	'RedNetherBrickStairs.cpp',
	'PolishedAndesiteStairs.cpp',
	'DioriteStairs.cpp',
	'PolishedGraniteSlab.cpp',
	'SmoothRedSandstoneSlab.cpp',
	'MossyStoneBrickSlab.cpp',
	'PolishedDioriteSlab.cpp',
	'MossyCobblestoneSlab.cpp',
	'EndStoneBrickSlab.cpp',
	'SmoothSandstoneSlab.cpp',
	'SmoothQuartzSlab.cpp',
	'GraniteSlab.cpp',
	'AndesiteSlab.cpp',
	'RedNetherBrickSlab.cpp',
	'PolishedAndesiteSlab.cpp',
	'DioriteSlab.cpp',
	'BrickWall.cpp',
	'PrismarineWall.cpp',
	'RedSandstoneWall.cpp',
	'MossyStoneBrickWall.cpp',
	'GraniteWall.cpp',
	'StoneBrickWall.cpp',
	'MudBrickWall.cpp',
	'NetherBrickWall.cpp',
	'AndesiteWall.cpp',
	'RedNetherBrickWall.cpp',
	'SandstoneWall.cpp',
	'EndStoneBrickWall.cpp',
	'DioriteWall.cpp',
	'Scaffolding.cpp',
	'Loom.cpp',
	'Barrel.cpp',
	'Smoker.cpp',
	'BlastFurnace.cpp',
	'CartographyTable.cpp',
	'FletchingTable.cpp',
	'Grindstone.cpp',
	'Lectern.cpp',
	'SmithingTable.cpp',
	'Stonecutter.cpp',
	'Bell.cpp',
	'Lantern.cpp',
	'SoulLantern.cpp',
	'Campfire.cpp',
	'SoulCampfire.cpp',
	'SweetBerryBush.cpp',
	'WarpedStem.cpp',
	'StrippedWarpedStem.cpp',
	'WarpedHyphae.cpp',
	'StrippedWarpedHyphae.cpp',
	'WarpedNylium.cpp',
	'WarpedFungus.cpp',
	'WarpedWartBlock.cpp',
	'WarpedRoots.cpp',
	'NetherSprouts.cpp',
	'CrimsonStem.cpp',
	'StrippedCrimsonStem.cpp',
	'CrimsonHyphae.cpp',
	'StrippedCrimsonHyphae.cpp',
	'CrimsonNylium.cpp',
	'CrimsonFungus.cpp',
	'Shroomlight.cpp',
	'WeepingVines.cpp',
	'WeepingVinesPlant.cpp',
	'TwistingVines.cpp',
	'TwistingVinesPlant.cpp',
	'CrimsonRoots.cpp',
	'CrimsonPlanks.cpp',
	'WarpedPlanks.cpp',
	'CrimsonSlab.cpp',
	'WarpedSlab.cpp',
	'CrimsonPressurePlate.cpp',
	'WarpedPressurePlate.cpp',
	'CrimsonFence.cpp',
	'WarpedFence.cpp',
	'CrimsonTrapdoor.cpp',
	'WarpedTrapdoor.cpp',
	'CrimsonFenceGate.cpp',
	'WarpedFenceGate.cpp',
	'CrimsonStairs.cpp',
	'WarpedStairs.cpp',
	'CrimsonButton.cpp',
	'WarpedButton.cpp',
	'CrimsonDoor.cpp',
	'WarpedDoor.cpp',
	'CrimsonSign.cpp',
	'WarpedSign.cpp',
	'CrimsonWallSign.cpp',
	'WarpedWallSign.cpp',
	'StructureBlock.cpp',
	'Jigsaw.cpp',
	'Composter.cpp',
	'Target.cpp',
	'BeeNest.cpp',
	'Beehive.cpp',
	'HoneyBlock.cpp',
	'HoneycombBlock.cpp',
	'NetheriteBlock.cpp',
	'AncientDebris.cpp',
	'CryingObsidian.cpp',
	'RespawnAnchor.cpp',
	'PottedCrimsonFungus.cpp',
	'PottedWarpedFungus.cpp',
	'PottedCrimsonRoots.cpp',
	'PottedWarpedRoots.cpp',
	'Lodestone.cpp',
	'Blackstone.cpp',
	'BlackstoneStairs.cpp',
	'BlackstoneWall.cpp',
	'BlackstoneSlab.cpp',
	'PolishedBlackstone.cpp',
	'PolishedBlackstoneBricks.cpp',
	'CrackedPolishedBlackstoneBricks.cpp',
	'ChiseledPolishedBlackstone.cpp',
	'PolishedBlackstoneBrickSlab.cpp',
	'PolishedBlackstoneBrickStairs.cpp',
	'PolishedBlackstoneBrickWall.cpp',
	'GildedBlackstone.cpp',
	'PolishedBlackstoneStairs.cpp',
	'PolishedBlackstoneSlab.cpp',
	'PolishedBlackstonePressurePlate.cpp',
	'PolishedBlackstoneButton.cpp',
	'PolishedBlackstoneWall.cpp',
	'ChiseledNetherBricks.cpp',
	'CrackedNetherBricks.cpp',
	'QuartzBricks.cpp',
	'Candle.cpp',
	'WhiteCandle.cpp',
	'OrangeCandle.cpp',
	'MagentaCandle.cpp',
	'LightBlueCandle.cpp',
	'YellowCandle.cpp',
	'LimeCandle.cpp',
	'PinkCandle.cpp',
	'GrayCandle.cpp',
	'LightGrayCandle.cpp',
	'CyanCandle.cpp',
	'PurpleCandle.cpp',
	'BlueCandle.cpp',
	'BrownCandle.cpp',
	'GreenCandle.cpp',
	'RedCandle.cpp',
	'BlackCandle.cpp',
	'CandleCake.cpp',
	'WhiteCandleCake.cpp',
	'OrangeCandleCake.cpp',
	'MagentaCandleCake.cpp',
	'LightBlueCandleCake.cpp',
	'YellowCandleCake.cpp',
	'LimeCandleCake.cpp',
	'PinkCandleCake.cpp',
	'GrayCandleCake.cpp',
	'LightGrayCandleCake.cpp',
	'CyanCandleCake.cpp',
	'PurpleCandleCake.cpp',
	'BlueCandleCake.cpp',
	'BrownCandleCake.cpp',
	'GreenCandleCake.cpp',
	'RedCandleCake.cpp',
	'BlackCandleCake.cpp',
	'AmethystBlock.cpp',
	'BuddingAmethyst.cpp',
	'AmethystCluster.cpp',
	'LargeAmethystBud.cpp',
	'MediumAmethystBud.cpp',
	'SmallAmethystBud.cpp',
	'Tuff.cpp',
	'Calcite.cpp',
	'TintedGlass.cpp',
	'PowderSnow.cpp',
	'SculkSensor.cpp',
	'Sculk.cpp',
	'SculkVein.cpp',
	'SculkCatalyst.cpp',
	'SculkShrieker.cpp',
	'OxidizedCopper.cpp',
	'WeatheredCopper.cpp',
	'ExposedCopper.cpp',
	'CopperBlock.cpp',
	'CopperOre.cpp',
	'DeepslateCopperOre.cpp',
	'OxidizedCutCopper.cpp',
	'WeatheredCutCopper.cpp',
	'ExposedCutCopper.cpp',
	'CutCopper.cpp',
	'OxidizedCutCopperStairs.cpp',
	'WeatheredCutCopperStairs.cpp',
	'ExposedCutCopperStairs.cpp',
	'CutCopperStairs.cpp',
	'OxidizedCutCopperSlab.cpp',
	'WeatheredCutCopperSlab.cpp',
	'ExposedCutCopperSlab.cpp',
	'CutCopperSlab.cpp',
	'WaxedCopperBlock.cpp',
	'WaxedWeatheredCopper.cpp',
	'WaxedExposedCopper.cpp',
	'WaxedOxidizedCopper.cpp',
	'WaxedOxidizedCutCopper.cpp',
	'WaxedWeatheredCutCopper.cpp',
	'WaxedExposedCutCopper.cpp',
	'WaxedCutCopper.cpp',
	'WaxedOxidizedCutCopperStairs.cpp',
	'WaxedWeatheredCutCopperStairs.cpp',
	'WaxedExposedCutCopperStairs.cpp',
	'WaxedCutCopperStairs.cpp',
	'WaxedOxidizedCutCopperSlab.cpp',
	'WaxedWeatheredCutCopperSlab.cpp',
	'WaxedExposedCutCopperSlab.cpp',
	'WaxedCutCopperSlab.cpp',
	'LightningRod.cpp',
	'PointedDripstone.cpp',
	'DripstoneBlock.cpp',
	'CaveVines.cpp',
	'CaveVinesPlant.cpp',
	'SporeBlossom.cpp',
	'Azalea.cpp',
	'FloweringAzalea.cpp',
	'MossCarpet.cpp',
	'MossBlock.cpp',
	'BigDripleaf.cpp',
	'BigDripleafStem.cpp',
	'SmallDripleaf.cpp',
	'HangingRoots.cpp',
	'RootedDirt.cpp',
	'Mud.cpp',
	'Deepslate.cpp',
	'CobbledDeepslate.cpp',
	'CobbledDeepslateStairs.cpp',
	'CobbledDeepslateSlab.cpp',
	'CobbledDeepslateWall.cpp',
	'PolishedDeepslate.cpp',
	'PolishedDeepslateStairs.cpp',
	'PolishedDeepslateSlab.cpp',
	'PolishedDeepslateWall.cpp',
	'DeepslateTiles.cpp',
	'DeepslateTileStairs.cpp',
	'DeepslateTileSlab.cpp',
	'DeepslateTileWall.cpp',
	'DeepslateBricks.cpp',
	'DeepslateBrickStairs.cpp',
	'DeepslateBrickSlab.cpp',
	'DeepslateBrickWall.cpp',
	'ChiseledDeepslate.cpp',
	'CrackedDeepslateBricks.cpp',
	'CrackedDeepslateTiles.cpp',
	'InfestedDeepslate.cpp',
	'SmoothBasalt.cpp',
	'RawIronBlock.cpp',
	'RawCopperBlock.cpp',
	'RawGoldBlock.cpp',
	'PottedAzaleaBush.cpp',
	'PottedFloweringAzaleaBush.cpp',
	'OchreFroglight.cpp',
	'VerdantFroglight.cpp',
	'PearlescentFroglight.cpp',
	'Frogspawn.cpp',
	'ReinforcedDeepslate.cpp'
])

blocks_inc = []
# blocks_inc = include_directories('.')

blocks_lib = static_library('blocks', blocks_src, include_directories: blocks_inc)

blocks_dep = declare_dependency(link_with: blocks_lib, include_directories: blocks_inc)

cubic_deps += [ blocks_dep ]