#========
# Sources
#========

cubic_src += files([
	'Message.cpp',
	'Message.hpp',
	'ChatRegistry.cpp',
	'ChatRegistry.hpp',
	'translationFromKey.cpp',
	'translationFromKey.hpp',
	'SimpleMessage.cpp',
	'SimpleMessage.hpp'
])

# cubic_include += include_directories('.')

#==============
# Other subdirs
#==============

subdir('events')