#========
# Sources
#========

cubic_src += files([
	'CommandBase.hpp',
	'Deop.hpp',
	'Deop.cpp',
	'DumpChunk.cpp',
	'DumpChunk.hpp',
	'Help.cpp',
	'Help.hpp',
	'Log.cpp',
	'Log.hpp',
	'Op.hpp',
	'Op.cpp',
	'QuestionMark.cpp',
	'QuestionMark.hpp',
	'Reload.cpp',
	'Reload.hpp',
	'Seed.cpp',
	'Seed.hpp',
	'Stop.cpp',
	'Stop.hpp',
	'Time.cpp',
	'Time.hpp'
])

# cubic_include += include_directories('.')
